# promptmeter

./: .gitignore  .golangci.yml  CONTRIBUTING.md  README.md  renovate.json
dashboard/: middleware.ts  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  providers.tsx
dashboard/lib/: chart-colors.ts  period-context.tsx
deploy/: Dockerfile.dashboard  Dockerfile.dashboard-ui  Dockerfile.ingestion  Dockerfile.seed  Dockerfile.trafficgen  Dockerfile.worker  docker-compose.dev.yml
migrations/clickhouse/: 20260401120001_create_mv_cost_by_model_daily.up.sql  20260401120002_create_mv_cost_by_tag_daily.up.sql  20260401120003_create_mv_cost_by_tag_daily_table.up.sql  20260401120003_create_mv_cost_hourly.up.sql  20260401120006_create_mv_cost_hourly_view.up.sql  20260402120001_create_mv_cost_by_model_daily_v2_table.up.sql  20260402120003_create_mv_cost_by_tag_daily_v2_table.up.sql  20260402120006_create_mv_cost_hourly_v2_view.up.sql
migrations/postgres/: 20260401120000_create_enums.up.sql  20260401120001_create_organizations.up.sql  20260401120003_create_org_members.up.sql  20260401120004_create_api_keys.up.sql  20260401120008_create_model_prices.up.sql  20260401120012_seed_model_prices.up.sql  20260402120000_create_refresh_tokens.up.sql  (+1 more)
sdk/python/: pyproject.toml
sdk/python/promptmeter/: __init__.py  _context.py  _flusher.py  _queue.py  _types.py  _wrap.py  client.py
sdk/python/tests/: conftest.py  test_client.py  test_flusher.py  test_queue.py  test_validation.py  test_wrap_anthropic.py  test_wrap_openai.py
server/: go.mod  go.sum
(+103 files in other folders)
