[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptmeter"
version = "0.1.0"
description = "Promptmeter SDK for tracking LLM API costs"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "openai>=2.30.0",
    "anthropic>=0.52",
]

[tool.setuptools.packages.find]
include = ["promptmeter*"]
